--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fast-boolean-array",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "homepage": "https://github.com/UltraCakeBakery/FastBooleanArray",
   "repository": {
     "type": "git",
@@ -43,6 +43,7 @@
     "node": ">=0.10.3"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "tsup": "^8.3.5"
   }
 }
