feat: add tests and fix bugs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fast-boolean-array",
-  "version": "1.4.3",
+  "version": "1.4.5",
   "homepage": "https://github.com/UltraCakeBakery/FastBooleanArray",
   "repository": {
     "type": "git",
@@ -25,9 +25,11 @@
     }
   },
   "scripts": {
-    "check": "npm run check:types",
+    "check": "npm run check:types ; npm run check:test",
+    "check:test": "vitest",
     "check:types": "npx --yes @arethetypeswrong/cli --pack .",
-    "build": "tsup src/index.ts --dts --format cjs,esm --clean --sourcemap --minify"
+    "build": "tsup src/index.ts --dts --format cjs,esm --clean --sourcemap --minify",
+    "publish": "npm publish"
   },
   "keywords": [
     "boolean",
@@ -45,6 +47,7 @@
   "devDependencies": {
     "@types/node": "^22.10.2",
     "tsup": "^8.3.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
